--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,34 @@
 .header{
+    height: 300px;
     text-align: center;
-    background-color: black;
+    background-image: url(../../images/opening-ceremony-header.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    padding: 10px;
+    position: relative;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.322);
+    z-index: 2;
+}
+.header h1{
+    color: rgb(183, 212, 20);
+    font-weight: bold;
+    
+}
+.header h2{
+    color: rgb(223, 20, 20);
+    font-weight: bold;
+    font-size: 2em;
+    
+}
+.header p{
     color: white;
-    padding: 20px;
+    font-size: large;
+    
 }
