--- a/src/components/Artist/Artist.css
+++ b/src/components/Artist/Artist.css
@@ -1,3 +1,4 @@
+/* artist section component styles here */
 .artist {
    border: 1px solid rgb(183, 212, 20); 
    border-radius: 10px;
@@ -18,19 +19,18 @@
     font-weight: 500;
 }
 .details h4 {
-    color: rgb(223, 20, 20);
+    color: rgb(211, 27, 27);
 }
 .regular-btn {
     background-color: transparent;
-    border: 1px solid rgb(223, 20, 20);
+    border: 1px solid rgb(211, 27, 27);
     width: 130px;
     height: 40px;
     border-radius: 5px;
     cursor: pointer;
 }
-
 .regular-btn:hover {
-    background-color: rgb(223, 20, 20);
+    background-color: rgb(211, 27, 27);
     color: white;
     font-weight: 600;
 }
