--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,4 @@
+/* header section component styles here */
 .header{
     height: 300px;
     text-align: center;
@@ -13,8 +14,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.322);
-    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 .header h1{
     color: rgb(183, 212, 20);
@@ -22,13 +23,11 @@
     
 }
 .header h2{
-    color: rgb(223, 20, 20);
+    color: rgb(211, 27, 27);
     font-weight: bold;
     font-size: 2em;
-    
 }
 .header p{
     color: white;
     font-size: large;
-    
 }
